--- a/bower.json
+++ b/bower.json
@@ -3,12 +3,20 @@
     "name": "https://github.com/kanzelm3"
   },
   "name": "angular-video-bg",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "main": "angular-video-bg.min.js",
   "ignore": [
     "**/.*",
     "node_modules",
-    "bower_components"
+    "angular-video-bg.spec.js",
+    ".bowerrc",
+    ".editorconfig",
+    ".gitignore",
+    ".jshintrc",
+    ".npmignore",
+    "Gruntfile.js",
+    "index.html",
+    "screenshot.png"
   ],
   "dependencies": {
     "angular": "~1.2"
